--- a/roles/myproject/tasks/main.yml
+++ b/roles/myproject/tasks/main.yml
@@ -1,7 +1,7 @@
 
 - name: ----------- create project yml ------------
   file:
-    path: "{{ansible_root}}/{{project_name"
+    path: "{{ansible_root}}/{{project_name}}"
     state: touch
   tags: [crate_prj_yml]
 
