--- a/roles/myproject/tasks/main.yml
+++ b/roles/myproject/tasks/main.yml
@@ -1,19 +1,22 @@
-- name: -------- create project roles ---------
+- name: -------- create project  ---------
   file:
     path: "{{ansible_root}}/{{project_name}}/"
     state: directory
-  tags: [create_rolse]
+  tags: [create_project]
+
 
 - name: ----------- create project yml ------------
   file:
     path: "{{ansible_root}}/{{project_name}}.yml"
     state: touch
   tags: [crate_prj_yml]
-- name: ----------- create hosts yml ------------
+
+  
+- name: ----------- create hosts  ------------
   file:
     path: "{{ansible_root}}/{{project_name}}/hosts"
     state: touch
-  tags: [crate_prj_yml]
+  tags: [crate_prj_host]
 
 - name: --------- create 7 directory ----------
   file: 
